small browse page changes

--- a/app/templates/template.browse.html
+++ b/app/templates/template.browse.html
@@ -15,21 +15,19 @@
     </div>
   </div>
   <div class='container'>
-      <div class="row">
-        <div class="col-md-8">
-          <div class="row">
-            <div class='panel panel-default' id='view-browse-toolbar'></div>
-          </div>
-          <div class="row">
-            <div class='panel panel-default' id='view-browse-results'></div>
-          </div>
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="row">
+          <div class='panel panel-default' id='view-browse-toolbar'></div>
         </div>
-        <div class="col-md-4">
-          <div class='panel panel-default' id='view-browse-sidebar'></div>
+        <div class="row">
+          <div class='panel panel-default' id='view-browse-results'></div>
         </div>
       </div>
-
-    
+      <div class="col-sm-4">
+        <div id='view-browse-sidebar'></div>
+      </div>
+    </div>
   </div>
 </script>
 
@@ -47,47 +45,39 @@
     </form>
   </div>
 </script>
+
 <!-- Browse Sidebar Page Template -->
 <script id="view-browse-sidebar-template" type="text/template">
-
-
-
+  <p> some stuff </p>
+  <div class='checkbox'>
+    <label>
+      <input type='checkbox'> Adult language filter is OFF
+    </label>
+  </div>
 </script>
+
 <!-- Browse Results Page Template -->
 <script id="view-browse-results-template" type="text/template">
-
-
-<div class="view-browse-results-container">
-
-</div>
-
-<div class="panel-footer">
-  <p> hello </p>
-</div>
-
-
+  <div class="view-browse-results-container"></div>
 </script>
+
 <!-- Result partial Template -->
 <script id="view-browse-result-template" type="text/template">
-
-
-<div class="row">
-  <div class="col-md-8">
-    <div class="row">
-      <div class="col-md-12">
-        <h5> <%- name %></h5>
+  <div class="row">
+    <div class="col-sm-8">
+      <div class="row">
+        <div class="col-sm-12">
+          <h5> <%- name %></h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <p> <%- description %></p>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <p> <%- description %></p>
-      </div>
+    <div class="col-sm-4 browse-view-button">
+      <a href="#view/<%- deck_id %>"class="btn btn-default btn-block">View</a>
     </div>
   </div>
-  <div class="col-md-4 browse-view-button">
-    <a href="#view/<%- deck_id %>"class="btn btn-default btn-block">View</a>
-  </div>
-</div>
-
-
 </script>
