--- a/app/templates/template.navbar.html
+++ b/app/templates/template.navbar.html
@@ -71,14 +71,18 @@
         <h4 class='modal-title' id='modal-login-label'><i class='fa fa-fw fa-user'></i> Login </h4>
       </div>
       <div class='modal-body'>
-        <div class='form-group'>
-          <label for='modal-login-email'>Email address</label>
-          <input type='email' class='form-control' id='modal-login-email' placeholder='Enter email'>
+        <div id='modal-login-form'>
+          <div class='form-group'>
+            <label for='modal-login-email'>Email address</label>
+            <input type='email' class='form-control' id='modal-login-email' placeholder='Enter email'>
+          </div>
+          <div class='form-group'>
+            <label for='modal-login-pass'>Password</label>
+            <input type='password' class='form-control' id='modal-login-pass' placeholder='Password'>
+          </div>
         </div>
-        <div class='form-group'>
-          <label for='modal-login-pass'>Password</label>
-          <input type='password' class='form-control' id='modal-login-pass' placeholder='Password'>
-        </div>
+        <p id='modal-login-error' class='help-block-danger'>Login failed</p>
+        <span id='modal-login-spinner'><i class='spinner fa fa-2x fa-fw fa-cog fa-spin'></i></span>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-default' data-dismiss='modal'>Close</button>
