--- a/app/templates/template.navbar.html
+++ b/app/templates/template.navbar.html
@@ -8,15 +8,15 @@
         <span class='icon-bar'></span>
         <span class='icon-bar'></span>
       </button>
-      <a class='navbar-brand' href='#'><img src='assets/img/cube-32.png'> brain.cards</a>
+      <a class='navbar-brand' href='#/'><img src='assets/img/cube-32.png'> brain.cards</a>
     </div>
     <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
       <ul id='main-navbar' class='nav navbar-nav navbar-left'>
-        <li id='nav-create'><a href='#create'>Create a Deck</a></li>
-        <li id='nav-browse'><a href='#browse'>Browse Decks</a></li>
+        <li id='nav-create'><a href='#/create'>Create a Deck</a></li>
+        <li id='nav-browse'><a href='#/browse'>Browse Decks</a></li>
       </ul>
       <ul class='nav navbar-nav navbar-right'>
-        <li id='nav-local'><a href='#local'>My Decks <span class='badge'></span></a></li>
+        <li id='nav-local'><a href='#/local'>My Decks <span class='badge'></span></a></li>
         <li><button class='btn navbar-btn btn-link' id='navbar-login-btn'>login</button></li>
         <li><button class='btn navbar-btn btn-link' id='navbar-register-btn'>register</button></li>
         <li><button class='btn navbar-btn btn-link' id='navbar-logout-btn'>logout</button></li>
