deck edits dont send private_key if user is logged in

--- a/app/templates/template.deleted.html
+++ b/app/templates/template.deleted.html
@@ -10,6 +10,11 @@
   </div>
   <div class='container'>
     <p class='note text-center'> This deck no longer exists. </p>
-    <h3 class='text-center'> <a href='#create'> Create a new deck <i class='fa fa-fw fa-angle-double-right'></i> </a> </h3>
+    <h3 class='text-center'>
+      <a href='#/create'>
+        Create a new deck
+        <i class='fa fa-fw fa-angle-double-right'></i>
+      </a>
+    </h3>
   </div>
 </script>
