--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,1 +1,249 @@
-strong { color: cyan; }
+html {
+  font-family : 'Roboto','Fjord One',Georgia,Times,serif;
+  color       : #222;
+  font-size   : 1em;
+  line-height : 1.4;
+  height      : 100%;
+  background  : none repeat scroll 0% 0% #FFF;
+
+  -ms-text-size-adjust     : 100%;
+  -webkit-text-size-adjust : 100%;
+}
+
+body {
+  padding : 0;
+  margin  : 0;
+
+  background  : none repeat scroll 0% 0% #FEFEFE;
+  border-top  : 10px solid #3D898F;
+  color       : #4F545A;
+}
+
+* { box-sizing : border-box; }
+
+.container {
+  margin-left  : auto;
+  margin-right : auto;
+  width        : 960px;
+  position     : relative;
+}
+
+
+/*
+ * PAGE HEADER
+ */
+.page-header {
+  position : static;
+  width    : 100%;
+
+  background-color : #DEFEFF;
+  border-bottom    : 1px solid #F0A7A7;
+}
+
+.page-header .nav-item {
+  text-decoration : none;
+
+  padding     : 20px 14px;
+  display     : inline-block;
+  font-weight : 500;
+  color       : #514F4F;
+  transition  : .12s background-color ease-out;
+  float       : left;
+}
+
+.page-header
+.nav-item:hover,
+.nav-item.active {
+  background-color : #BCF8FF;
+}
+
+.page-header .brand {
+  margin-left : -14px;
+}
+
+.page-header nav {
+  float        : right;
+  position     : relative;
+  margin-right : -14px;
+}
+
+.page-header:after {
+  content : '';
+  display : table ;
+  clear   : both;
+}
+
+/*
+ * LOCAL HEADER
+ */
+.local-header {
+  border-bottom : 1px solid #eee;
+  position      : relative;
+  padding       : 20px 0px;
+  margin-bottom : 16px;
+}
+
+.local-header h1 {
+  font-weight : 400;
+  font-size   : 20px;
+  line-height : 30px;
+  margin      : 0px;
+  float       : left;
+  color       : #666;
+  position    : relative;
+}
+
+.local-header:after {
+  content : '';
+  display : table ;
+  clear   : both;
+}
+
+
+/*
+ * PAGE CONTENT
+ */
+.page-content {
+  min-height : 420px;
+}
+
+/*
+ * PAGE FOOTER
+ */
+.page-footer {
+  border-top : 1px dashed #C5D7D7;
+  font-size  : 13px;
+  color      : #868686;
+  margin     : 20px 0px;
+  padding    : 20px 0px;
+}
+
+.page-footer a {
+  text-decoration : none;
+  color           : inherit;
+  font-weight     : 500;
+}
+
+/*
+ * TEXT SELECTION
+ */
+::-moz-selection {
+	background  : none repeat scroll 0% 0% #FCFA3A;
+	color       : #393232;
+	text-shadow : none
+}
+
+::selection {
+	background  : #FCFA3A;
+	color       : #393232;
+	text-shadow : none
+}
+
+/*
+ * GRID
+ */
+.row { width : 100%; }
+
+.row:before,
+.row:after {
+  content : '';
+  display : table ;
+  clear   : both;
+}
+
+[class*='col-'] {
+  float      : left;
+  min-height : 1px;
+  width      : 16.66%;
+  padding    : 12px;
+}
+
+.col-1  { width : 8.33333%; }
+.col-2  { width : 16.6666%; }
+.col-3  { width : 25%;      }
+.col-4  { width : 33.3333%; }
+.col-5  { width : 41.6666%; }
+.col-6  { width : 50%;      }
+.col-7  { width : 58.33333%;}
+.col-8  { width : 66.6666%; }
+.col-9  { width : 75%;      }
+.col-10 { width : 83.3333%; }
+.col-11 { width : 91.6666%; }
+.col-12 { width : 100%;     }
+
+/*
+ * FORMS
+ */
+button, input,
+select, textarea {
+  font-family : inherit;
+  font-size   : inherit;
+  line-height : inherit;
+}
+
+label {
+  display       : inline-block;
+  max-width     : 100%;
+  margin-bottom : 5px;
+  font-weight   : 700;
+}
+
+.form-group {
+  margin-bottom : 15px;
+}
+
+.form-help {
+  color       : #737373;
+  font-weight : 400;
+}
+
+.form-error {
+  color         : #A94442;
+  font-weight   : 400;
+  display       : none;
+  margin-top    : 5px;
+  margin-bottom : 10px;
+}
+
+.form-group.error .form-error {
+  display : block;
+}
+
+.form-group.error .form-input,
+.form-input.error {
+  border-color: #A94442;
+}
+
+.form-input {
+  display   : block;
+  width     : 100%;
+  height    : 34px;
+  padding   : 6px 12px;
+  font-size : 14px;
+  border    : 1px solid #ccc;
+
+  background-color : #fff;
+
+  transition : border-color 0.15s ease-in-out 0s,
+               box-shadow   0.15s ease-in-out 0s;
+}
+
+.form-input:focus {
+  border-color : #5DBAE9;
+  box-shadow   : 0px 0px 4px #B1EFEF;
+}
+
+/*
+ * HELPERS
+ */
+.clear:before,
+.clear:after {
+  content : '';
+  display : table;
+}
+.clear:after {
+  clear : both;
+}
+
+.pull-left  { float : left; }
+.pull-right { float : right; }
