--- a/src/css/main.css
+++ b/src/css/main.css
@@ -31,7 +31,7 @@ body {
 
 /*
  * PAGE HEADER
- */
+ * =============================================== */
 .page-header {
   position : static;
   width    : 100%;
@@ -54,7 +54,7 @@ body {
 .page-header
 .nav-item:hover,
 .nav-item.active {
-  background-color : #BCF8FF;
+  background-color : #BBE0DA;
 }
 
 .page-header .brand {
@@ -75,7 +75,7 @@ body {
 
 /*
  * LOCAL HEADER
- */
+ * =============================================== */
 .local-header {
   border-bottom : 1px solid #eee;
   position      : relative;
@@ -102,14 +102,14 @@ body {
 
 /*
  * PAGE CONTENT
- */
+ * =============================================== */
 .page-content {
   min-height : 420px;
 }
 
 /*
  * PAGE FOOTER
- */
+ * =============================================== */
 .page-footer {
   border-top : 1px dashed #C5D7D7;
   font-size  : 13px;
@@ -125,23 +125,8 @@ body {
 }
 
 /*
- * TEXT SELECTION
- */
-::-moz-selection {
-	background  : none repeat scroll 0% 0% #FCFA3A;
-	color       : #393232;
-	text-shadow : none
-}
-
-::selection {
-	background  : #FCFA3A;
-	color       : #393232;
-	text-shadow : none
-}
-
-/*
  * GRID
- */
+ * =============================================== */
 .row { width : 100%; }
 
 .row:before,
@@ -173,7 +158,7 @@ body {
 
 /*
  * FORMS
- */
+ * =============================================== */
 button, input,
 select, textarea {
   font-family : inherit;
@@ -192,6 +177,15 @@ label {
   margin-bottom : 15px;
 }
 
+.form-group.error .form-error {
+  display : block;
+}
+
+.form-group.error .form-input,
+.form-input.error {
+  border-color: #A94442;
+}
+
 .form-help {
   color       : #737373;
   font-weight : 400;
@@ -203,15 +197,6 @@ label {
   display       : none;
   margin-top    : 5px;
   margin-bottom : 10px;
-}
-
-.form-group.error .form-error {
-  display : block;
-}
-
-.form-group.error .form-input,
-.form-input.error {
-  border-color: #A94442;
 }
 
 .form-input {
@@ -233,9 +218,106 @@ label {
   box-shadow   : 0px 0px 4px #B1EFEF;
 }
 
+.radio,
+.checkbox {
+  position : relative;
+  display  : block;
+
+  margin-top    : 10px;
+  margin-bottom : 10px;
+}
+
+.form-group-checkbox label,
+.checkbox label,
+.form-group-radio label,
+.radio label {
+  display       : block;
+  cursor        : pointer;
+  padding-left  : 20px;
+  margin-bottom : 8px;
+  font-weight   : 400;
+}
+
+.form-group-radio input[type="radio"],
+.radio input[type="radio"],
+.form-group-checkbox input[type="checkbox"],
+.checkbox input[type="checkbox"] {
+  position    : absolute;
+  margin-left : -20px;
+}
+
+/*
+ * BUTTONS
+ * =============================================== */
+.btn {
+  display   : inline-block;
+  padding   : 6px 12px;
+  font-size : 14px;
+
+  font-weight : 400px;
+  text-align  : center;
+  white-space : nowrap;
+  cursor      : pointer;
+
+  vertical-align  : middle;
+  border          : 1px solid transparent;
+  border-radius   : 3px;
+  text-decoration : none;
+}
+
+.btn.active,
+.btn:active {
+  background-image   : none;
+  outline            : 0;
+  box-shadow         : inset 0 3px 5px rgba(0, 0, 0, .125);
+  -webkit-box-shadow : inset 0 3px 5px rgba(0, 0, 0, .125);
+}
+
+.btn-default {
+  color            : #333;
+  background-color : #fff;
+  border-color     : #ccc;
+}
+
+.btn-block {
+  width   : 100%;
+  display : block;
+}
+
+.btn-xs {
+	padding       : 1px 5px;
+	font-size     : 12px;
+	line-height   : 1.5;
+	border-radius : 3px
+}
+
+.btn-sm {
+	padding       : 5px 10px;
+	font-size     : 12px;
+	line-height   : 1.5;
+	border-radius : 3px
+}
+
+.btn-lg {
+	padding       : 10px 16px;
+	font-size     : 18px;
+	line-height   : 1.3333333;
+	border-radius : 5px
+}
+
+.btn-default:active,
+.btn-default:focus,
+.btn-default.active,
+.btn-default.focus,
+.btn-default:hover {
+  color            : #333;
+  background-color : #e6e6e6;
+  border-color     : #adadad;
+}
+
 /*
  * HELPERS
- */
+ * =============================================== */
 .clear:before,
 .clear:after {
   content : '';
@@ -247,3 +329,34 @@ label {
 
 .pull-left  { float : left; }
 .pull-right { float : right; }
+
+
+/*
+ * GENERIC
+ * =============================================== */
+::-moz-selection {
+	background  : none repeat scroll 0% 0% #FCFA3A;
+	color       : #393232;
+	text-shadow : none
+}
+
+::selection {
+	background  : #FCFA3A;
+	color       : #393232;
+	text-shadow : none
+}
+
+hr {
+  border-color        : #ccc;
+  margin              : 26px 0px;
+  border-width        : 0px;
+  border-bottom-width : 1px;
+}
+
+
+
+/*
+ * SPECIFIC
+ * =============================================== */
+
+
