dependency injection stuff and extension of default objects such as View and Controller, backbone style

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -375,4 +375,11 @@ hr {
  * SPECIFIC
  * =============================================== */
 
-
+._loader {
+  display    : none;
+  text-align : center;
+  color      : #777;
+}
+._loader-show {
+  display : block;
+}
